# typescript-react-bazel

./: BUILD.bazel  README.md  WORKSPACE  package-lock.json  package.json  tsconfig.json
app/: BUILD.bazel  app.tsx  index.tsx
proto/: BUILD.bazel  excel.proto
server/: BUILD.bazel  count.gtpl  server.go
server/handlers/: BUILD.bazel  handlers.go
server/session/: BUILD.bazel  session.go
server/session/memory/: BUILD.bazel  memory.go
