package(default_visibility = ["//visibility:public"])

exports_files(["tsconfig.json"])

# https://github.com/bazelbuild/rules_typescript#self-managed-npm-dependencies
filegroup(
    name = "node_modules",
    srcs = glob(
        include = [
          "node_modules/typescript/**",
          "node_modules/**/*.js",
          "node_modules/**/*.d.ts",
          "node_modules/**/*.json",
          "node_modules/.bin/*",
        ],
        exclude = [
          # Files under test & docs may contain file names that
          # are not legal Bazel labels (e.g.,
          # node_modules/ecstatic/test/public/中文/檔案.html)
          "node_modules/**/test/**",
          "node_modules/**/docs/**",
          # Files with spaces in the name are not legal Bazel labels
          "node_modules/**/* */**",
          "node_modules/**/* *",
        ],
    ),
)
