package(default_visibility=["//visibility:public"])
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "app",
    srcs = glob(["*.tsx"]),
    tsconfig = "//:tsconfig.json",
    deps = [
    	"@npm//@types/react",
    	"@npm//@types/react-dom",
    	"@npm//react",
    	"@npm//react-dom",
    ]
)
