package(default_visibility = ["//visibility:public"])

load("@build_stack_rules_proto//go:go_proto_library.bzl", "go_proto_library")

proto_library(
    name = "excel_proto",
    srcs = ["excel.proto"],
)

go_proto_library(
    name = "go_default_library",
    importpath = "github.com/dayfine/typescript-react-bazel/proto",
    deps = [
        ":excel_proto",
    ],
)
