load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")


go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "github.com/dayfine/typescript-react-bazel/server",
    visibility = ["//visibility:private"],
    deps = [
		"//server/handlers:go_default_library",
    ],
)

go_binary(
    name = "server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
