load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["memory.go"],
    importpath = "github.com/dayfine/typescript-react-bazel/server/session/memory",
    visibility = ["//visibility:public"],
    deps = ["//server/session:go_default_library"],
)
